# data-module

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
data/: alice_data1.csv  columns.json  data.csv  data_normalization.ipynb  pososi.json  programs.json
src/: main.py  models.py  test.py
src/classes/: data_generator.py  data_loader.py  embeddings_filter.py  embeddings_generator.py  preprocess_data.py  words.py
